--- a/extension.toml
+++ b/extension.toml
@@ -1,8 +1,10 @@
-id = "buildkite-mcp"
+id = "mcp-server-buildkite"
 name = "Buildkite MCP Integration"
 version = "0.1.0"
 schema_version = 1
 authors = ["Ben McNicholl <git@benmcnicholl.com>"]
-description = "Buildkite Integration for Zed - Access your Buildkite CI/CD pipelines and builds directly from your editor"
-repository = "https://github.com/mcncl/zed-buildkite-mcp-extension"
-wasm = "target/wasm32-wasi/release/zed_buildkite_mcp.wasm"
+description = "Model Context Protocol Server for Buildkite"
+repository = "https://github.com/mcncl/zed-mcp-server-buildkite"
+
+[context_servers.mcp-server-buildkite]
+name = "Buildkite MCP Server"
