--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,15 @@
 [package]
-name = "zed_buildkite_mcp"
+name = "mcp_server_buildkite"
 version = "0.1.0"
 edition = "2021"
+publish = false
+license = "MIT"
 
 [lib]
+path = "src/mcp_server_buildkite.rs"
 crate-type = ["cdylib"]
 
 [dependencies]
 zed_extension_api = "0.5.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-
-[profile.release]
-lto = true
-strip = true
-opt-level = "z"
-codegen-units = 1
