🔧 Fix up some bugs with build
Signed-off-by: Ben McNicholl <git@benmcnicholl.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mcp_server_buildkite"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
 publish = false
 license = "MIT"
@@ -10,6 +10,6 @@ path = "src/mcp_server_buildkite.rs"
 crate-type = ["cdylib"]
 
 [dependencies]
+serde = "1.0"
+schemars = "0.8"
 zed_extension_api = "0.5.0"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
